# json_struct

./: .gitignore  .gitmodules  ARCHITECTURE_REDESIGN_PROPOSAL.md  ARCHITECTURE_REFACTOR_COMPLETION_REPORT.md  AUTO_SERIALIZATION_COMPLETION_REPORT.md  BUILD_SUCCESS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPILATION_FIX_REPORT.md  ENHANCED_LIMITATIONS_ANALYSIS.md  FINAL_CLEANUP_REPORT.md  FUZZING_REPORT.md  JSONPATH_100_COMPLETE.md  JSONPATH_ANALYSIS.md  JSONPATH_CLEANUP_SUMMARY.md  JSON_VALUE_ENHANCED_GUIDE.md  JsonStructRegistryConfig.cmake.in  LICENSE  NUMERIC_PRECISION_ENHANCEMENT.md  PROJECT_REPOSITIONING_ANALYSIS.md  PROJECT_REPOSITIONING_COMPLETION_REPORT.md  PROJECT_STRUCTURE_ALIGNMENT_REPORT.md  PROJECT_SUMMARY.md  README.md  REGISTRY_SYSTEM_GUIDE.md  complex_data_1mb.json  demo_enhanced_simple.cpp  json_number.h  json_structConfig.cmake.in  json_value.cpp  json_value.h  json_value_enhanced.cpp  json_value_enhanced.h  jsonstruct_std.h  qt_types_registration.h  run_all_tests.ps1  run_fuzzer_tests.sh  std_custom_types_example.h  std_jsonstruct.h  (+4 more)
benchmarks/: CMakeLists.txt  QUICKSTART.md  README.md  build_benchmarks.ps1  run_benchmarks.ps1
benchmarks/tests/: CMakeLists.txt  advanced_benchmark.cpp  benchmark_framework.cpp  benchmark_framework.h  benchmark_main.cpp  comparison_benchmark.cpp  comparison_benchmark_simple.cpp  memory_benchmark.cpp  performance_benchmark.cpp  performance_reporter.cpp  serialization_benchmark.cpp
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  ENHANCED_LAZY_QUERY_GUIDE.md  ENHANCED_LAZY_QUERY_REFERENCE.md  LAZY_QUERY_GUIDE.md  PERFORMANCE_GUIDE.md  PERFORMANCE_REPORT.md  QUICK_START.md  README.md  STREAMING_QUERY.md  USER_GUIDE.md  VERSION_MANAGEMENT.md  jsonpath_mutable_implementation.md
docs/json_engine/: README.md  优化建议.md
docs/qt_types/: README.md
docs/std_types/: README.md
docs/type_registry/: QUICK_START.md  README.md
examples/: CMakeLists.txt  example_enhanced_simple.cpp  example_json_filter.cpp  example_json_filter_simple.cpp  example_jsonpath_complete.cpp  qt_complex_containers_example.cpp  qt_container_example.cpp  qt_universal_system_test.cpp  streaming_query_example.cpp  version_demo.cpp
src/: json_value.h  jsonstruct.h  version.cpp  version.h  version.h.in
src/json_engine/: enhanced_lazy_query_generator.cpp  enhanced_lazy_query_generator.h  enhanced_query_factory.cpp  enhanced_query_factory.h  json_error.h  json_filter.cpp  json_filter.h  json_lazy_query.h  json_number.h  json_patch.cpp  json_patch.h  json_path.cpp  json_path.h  json_path_filter_evaluator.cpp  json_path_filter_evaluator.h  json_path_parser.h  json_path_simple_evaluator.cpp  json_path_tokenizer.h  json_pipeline.cpp  json_pipeline.h  json_query_generator.cpp  json_query_generator.h  json_stream_parser.h  json_value.cpp  json_value.h  lazy_query_generator.cpp  lazy_query_generator.h  query_factory.cpp  query_factory.h
src/json_engine/internal/: json_path_advanced_evaluator.cpp  json_path_advanced_evaluator.h  json_path_filter_evaluator.cpp  json_path_filter_evaluator.h  json_path_parser.cpp  json_path_parser.h  json_path_simple_evaluator.h  json_path_tokenizer.cpp
src/qt/: qt_types_registration.h
src/qt_types/: qt_common.cpp  qt_common.h  qt_registry.h  qt_ultimate_registry.cpp  qt_ultimate_registry.h
src/std/: jsonstruct_std.h  std_custom_types_example.h  std_jsonstruct.h  std_type_registry.h  std_types_registration.h
src/std_types/: container_registry.h  custom_types_example.h  generic_container_support.h  std_registry.h
src/type_registry/: auto_serializer.h  field_macros.h  registry_core.h
test_framework/: ENHANCED_FRAMEWORK_DOCUMENTATION.md  test_framework.cpp  test_framework.h
test_framework_lib/: .gitignore  CMakeLists.txt  README.md
test_framework_lib/examples/: simple_test.cpp  test_framework_demo.cpp
test_framework_lib/include/test_framework/: test_framework.h
tests/: CMakeLists.txt  CMakeLists_core.txt  REORGANIZATION_SUMMARY.md  TEST_RUNNER_README.md  benchmark_framework.h  comparison_benchmark.cpp  comparison_benchmark_simple.cpp  debug_filter.cpp  design_verification.cpp  memory_benchmark.cpp  performance_benchmark.cpp  performance_reporter.cpp  rfc7396_test.cpp  simple_filter_test.cpp  test_advanced_functionality.cpp  test_advanced_jsonpath.cpp  test_all_runner.cpp  test_basic_functionality.cpp  test_basic_macros.cpp  test_complex_nested_containers.cpp  test_complex_structures.cpp  test_comprehensive_demo.cpp  test_comprehensive_json_auto.cpp  test_comprehensive_spaced.cpp  test_container_debug.cpp  test_core_functionality.cpp  test_custom_types.cpp  test_debug_serialization.cpp  test_deep_tostring.cpp  test_enhanced_cache_performance.cpp  test_enhanced_features.cpp  test_enhanced_lazy_comprehensive.cpp  test_enhanced_lazy_comprehensive_v2.cpp  test_enhanced_lazy_edge_cases.cpp  test_enhanced_lazy_query.cpp  test_enhanced_lazy_query_temp.cpp  test_error_codes.cpp  test_error_handling.cpp  test_error_recovery.cpp  test_extreme_exception_scenarios.cpp  (+61 more)
tests/fuzzing/: CMakeLists.txt  README.md  advanced_json_fuzzer.cpp  json_fuzzer.cpp
tests/fuzzing/seed_corpus/: invalid_incomplete.json  invalid_malformed.json  valid_array.json  valid_nested.json  valid_simple.json
